# advent-of-code

./: .gitignore  Cargo.toml
2019/rust/: Cargo.toml  README.md
2019/rust/instructions/day1/: readme-day1-part1.md
2019/rust/instructions/day2/: readme-day2-part1.md  readme-day2-part2.md
2019/rust/instructions/day3/: readme-day3-part1.md  readme-day3-part2.md
2019/rust/instructions/day4/: readme-day4-part1.md
2019/rust/instructions/day5/: readme-day5-part1.md
2019/rust/src/: lib.rs
2019/rust/src/day2/: day2-part2.rs
2019/rust/src/day3/: day3-part1.rs  geometry.rs  mod.rs
2019/rust/src/day4/: common.rs  day4-part1.rs  day4-part2.rs
2019/rust/src/helpers/: files.rs
2020/rust/: Cargo.toml
2020/rust/instructions/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md
2020/rust/instructions/day1/: part2.md
2020/rust/src/: day1-part1.rs  day1-part2.rs  day2-part1.rs  day2-part2.rs  day2_common.rs  day2_part1.rs  day2_part2.rs  day3_common.rs  day3_part1.rs  day3_part2.rs  day4_common.rs  day4_part1.rs  day4_part2.rs  day5_common.rs  day5_part1.rs  day5_part2.rs  day6_common.rs  day6_part1.rs  day6_part2.rs  day7_part1.rs  lib.rs
2020/rust/src/day1/: day1-part1.rs  day1-part2.rs
2021/rust/: Cargo.toml
2021/rust/instructions/: day1.md  day2.md  day3.md
2021/rust/src/: day1_common.rs  day1_part1.rs  day1_part2.rs  day2_common.rs  day2_part1.rs  day2_part2.rs  day3_part1.rs  day3_part2.rs  lib.rs
2022/rust/: Cargo.toml
2022/rust/instructions/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md
2022/rust/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
2022/rust/src/utils/: file.rs  mod.rs  testing_utils.rs
instructions/: readme-day1.md  readme-day2.md
instructions/day1/: readme-day1-part2.md
instructions/day2/: readme-day2-part2.md
instructions/day4/: readme-day4-part2.md
src/: day1-part2.rs  lib.rs
src/day1/: day1-part1.rs
src/day2/: compute.rs  day2-part1.rs
src/day3/: day3-part1.rs  day3-part2.rs  generators.rs  geometry.rs
src/day4/: day4-part1.rs  day4-part2.rs
src/helpers/: converters.rs  mod.rs
