[package]
name = "advent-of-code-2020-rust"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "2020-day1-part1"
path = "src/day1_part1.rs"

[[bin]]
name = "2020-day1-part2"
path = "src/day1_part2.rs"

[[bin]]
name = "2020-day2-part1"
path = "src/day2_part1.rs"

[[bin]]
name = "2020-day2-part2"
path = "src/day2_part2.rs"

[[bin]]
name = "2020-day3-part1"
path = "src/day3_part1.rs"

[[bin]]
name = "2020-day3-part2"
path = "src/day3_part2.rs"

[[bin]]
name = "2020-day4-part1"
path = "src/day4_part1.rs"

[dependencies]
regex = "1"