[package]
name = "advent-of-code-2020-rust"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "2020-day1-part1"
path = "src/day1_part1.rs"

[[bin]]
name = "2020-day1-part2"
path = "src/day1_part2.rs"

[[bin]]
name = "2020-day2-part1"
path = "src/day2_part1.rs"

[[bin]]
name = "2020-day2-part2"
path = "src/day2_part2.rs"

[[bin]]
name = "2020-day3-part1"
path = "src/day3_part1.rs"

[[bin]]
name = "2020-day3-part2"
path = "src/day3_part2.rs"

[[bin]]
name = "2020-day4-part1"
path = "src/day4_part1.rs"

[[bin]]
name = "2020-day4-part2"
path = "src/day4_part2.rs"

[[bin]]
name = "2020-day5-part1"
path = "src/day5_part1.rs"

[[bin]]
name = "2020-day5-part2"
path = "src/day5_part2.rs"

[[bin]]
name = "2020-day6-part1"
path = "src/day6_part1.rs"

[[bin]]
name = "2020-day6-part2"
path = "src/day6_part2.rs"

[[bin]]
name = "2020-day7-part1"
path = "src/day7_part1.rs"

[dependencies]
regex = "1"
itertools = "0.9.0"
slice-group-by = "0.2.6"
petgraph = "0.5.1"