[package]
name = "advent-of-code-2021-rust"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "2021-day1-part1"
path = "src/day1_part1.rs"

[[bin]]
name = "2021-day1-part2"
path = "src/day1_part2.rs"

[[bin]]
name = "2021-day2-part1"
path = "src/day2_part1.rs"

[[bin]]
name = "2021-day2-part2"
path = "src/day2_part2.rs"

[[bin]]
name = "2021-day3-part1"
path = "src/day3_part1.rs"

[dependencies]
itertools = "0.10.1"