[package]
name = "advent-of-code-2022-rust"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "2022-day1"
path = "src/day1.rs"

[[bin]]
name = "2022-day2"
path = "src/day2.rs"

[[bin]]
name = "2022-day3"
path = "src/day3.rs"

[[bin]]
name = "2022-day4"
path = "src/day4.rs"

[[bin]]
name = "2022-day5"
path = "src/day5.rs"

[dependencies]
itertools = "0.10.5"
regex = "1.7.0"
petgraph = "0.6.2"
id_tree = "1.8.0"